--- a/style.css
+++ b/style.css
@@ -976,3 +976,22 @@ footer {
 .link-loja:hover::after {
   width: 100%;
 }
+
+.map-container {
+    width: 100%;
+    height: 720px;
+    border-radius: 16px;
+    overflow: hidden;
+}
+
+@media (max-width: 480px) {
+    .map-container {
+        height: 240px;
+    }
+}
+
+.map-container iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
