--- a/style.css
+++ b/style.css
@@ -977,21 +977,8 @@ footer {
   width: 100%;
 }
 
-.map-container {
-    width: 100%;
-    height: 720px;
-    border-radius: 16px;
-    overflow: hidden;
-}
-
-@media (max-width: 480px) {
-    .map-container {
-        height: 240px;
+@media (max-width: 406px) {
+    .location-map {
+        margin-top: 30px;
     }
-}
-
-.map-container iframe {
-    width: 100%;
-    height: 100%;
-    border: 0;
 }
