--- a/style.css
+++ b/style.css
@@ -977,11 +977,26 @@ footer {
   width: 100%;
 }
 
-@media (max-width: 206px) {
-    .location-map {
-        margin-top: 20px;
-    }
+.map-container {
+  width: 600px;
+  height: 450px;
+  margin: 0 auto;
 }
+
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+  .map-container {
+    width: 100%;
+    height: 300px; /* ajusta a altura no celular */
+  }
+}
+
 
 .btn-link
    { 
